# flowpilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20ff9d860a97_create_conversations_messages_workflows.py  a1b2c3d4e5f6_create_workflow_versions.py  b2c3d4e5f6a7_create_knowledge_notes.py  c3d4e5f6a7b8_create_learning_records.py  d4e5f6a7b8c9_create_n8n_templates.py
backend/app/: config.py  main.py
backend/app/api/routes/: chat.py  conversations.py  debug.py  health.py  knowledge.py  templates.py  workflows.py  ws.py
backend/app/core/: context_manager.py  conversation_engine.py  llm_client.py  n8n_client.py  n8n_template_client.py  prompt_engine.py  prompt_trace.py  retry.py
backend/app/db/: base.py  models.py  repositories.py  session.py
backend/app/rag/: chroma_client.py  template_distiller.py
backend/app/rag/knowledge/examples/: example_workflows.md
backend/app/rag/knowledge/nodes/: node_reference.md
backend/app/rag/knowledge/patterns/: conditional_patterns.md  error_handling_patterns.md  integration_patterns.md  schedule_patterns.md  webhook_patterns.md
backend/app/schemas/: chat.py  conversation.py
backend/app/workflow/: editor.py  generator.py  node_registry.py  schema.py  validator.py
backend/scripts/: benchmark.py  benchmark_prompts.json  benchmark_results.json
backend/tests/: conftest.py  test_api.py  test_generator.py  test_intelligence_layers.py  test_n8n_client.py  test_validator.py
(+39 files in other folders)
